# xecutbot

./: .gitignore  Cargo.toml  build.sh  deploy_nix.sh  devenv.nix  run.sh  update.sh  xecut_bot_example.yaml
src/: backend.rs  bot.rs  config.rs  date.rs  lib.rs  main.rs  rest_api.rs  selfupdate.rs  time.rs  visits.rs
src/bot/: announcements.rs  livestatus.rs  mod.rs  person_details.rs  status.rs  util.rs  verification.rs  visits.rs
src/datetime/: format.rs  mod.rs  parse.rs  util.rs
