[package]
name = "xecut_bot"
description = "Xecut hackerspace bot"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["hackerspace", "tokio"]
version = "0.3.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.46", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7"
config = "0.15"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
chrono-tz = "0.10"
futures = "0.3"
itertools = "0.14"
clap = { version = "4.5", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["catch-panic"] }
derive-where = "1.6"
regex = "1.12.2"
